# whisper-dictate

./: .gitignore  Whisper Dictate (silent).vbs  Whisper Dictate.bat  config.example.toml  pyproject.toml  whisper_relay.py
extension/: background.js  manifest.json  popup.html
src/whisper_dictate/: __main__.py  commands.py  config.py  ext_server.py  gui.py  output.py  recorder.py  transcriber.py  vocabulary.py
tests/: test_vocabulary.py
