[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-dictate"
version = "0.1.0"
description = "Local push-to-talk dictation using faster-whisper"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24",
    "keyboard>=0.13.5",
    "pyperclip>=1.8.2",
    "pystray>=0.19.5",
    "Pillow>=10.0",
    "tomli-w>=1.0.0",
]

[project.scripts]
whisper-dictate = "whisper_dictate.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
